crates/eml_cli/tests/snapshots/ui__run@data__clause_patterns.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/clause_patterns.em
---
--- stdout ---
42
--- stderr ---
