crates/eml_cli/tests/snapshots/ui__run@data__constructor_functions.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/constructor_functions.em
---
--- stdout ---
1 one
2 two
3
4
--- stderr ---
