crates/eml_cli/tests/snapshots/ui__run@data__constructors.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/constructors.em
---
--- stdout ---
pair
done
--- stderr ---
