crates/eml_cli/tests/snapshots/ui__run@data__infix_constructors.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/infix_constructors.em
---
--- stdout ---
6
--- stderr ---
