crates/eml_cli/tests/snapshots/ui__run@data__known_constructors.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/known_constructors.em
---
--- stdout ---
3
7
11
21
2
1
--- stderr ---
