crates/eml_cli/tests/snapshots/ui__run@data__list.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/list.em
---
--- stdout ---
10
55
500500
--- stderr ---
