crates/eml_cli/tests/snapshots/ui__run@data__match_with_effects.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/match_with_effects.em
---
--- stdout ---
[a] [a?]
[yes] [no]
--- stderr ---
