crates/eml_cli/tests/snapshots/ui__run@data__nested_patterns.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/nested_patterns.em
---
--- stdout ---
both 3
second 3
other
other
empty
--- stderr ---
